[package]
name = "podcast-tweaker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.12.2"
rss = "2.0.7"
tokio = { version = "1.37.0", features = ["full"] }
vercel_runtime = { version = "1.1.6" }

[[bin]]
name = "handler"
path = "api/handler.rs"
